kubernetes-network/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodework
  namespace: homework
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  selector:
    matchLabels:
      app: nodework
  template:
    metadata:
      labels:
        app: nodework
    spec:
      nodeSelector:
        homework: "true"
      volumes:
        - name: shared-volume
          emptyDir: {}
      containers:
        - name: main-container
          image: python:3.9-slim
          ports:
            - containerPort: 80
          volumeMounts:
            - name: shared-volume
              mountPath: /homework

          readinessProbe:
            httpGet:
              path: /index.html
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "rm -f /homework/index.html"]
          command: ["python3", "-m", "http.server", "80"]
          workingDir: /homework
